traefik/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik-ingress
  namespace: traefik
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    matchLabels:
      name: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.7
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: admin
          containerPort: 8080
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
        - --insecureSkipVerify
        - --ping
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress
  namespace: traefik
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      name: web
      nodePort: 30000
#    - protocol: TCP
#      port: 8080
#      name: admin
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: traefik
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
    nodePort: 30001
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ing-web-ui
  namespace: traefik
  annotations:
   kubernetes.io/ingress.class: traefik
   traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
   traefik.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: "$PUBLIC_DOMAIN"
    http:
      paths:
      - path: /monitoring/traefik
        backend:
          serviceName: traefik-web-ui
          servicePort: web
